infrastructure/kubernetes/core/queue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue
spec:
  selector:
    app: queue
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
---
apiVersion: v1
kind: Service
metadata:
  name: queue-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: queue
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
